try mdx out on one post, do all the things to get it working

--- a/src/posts/published/just-enough-fp-pure-functions/index.mdx
+++ b/src/posts/published/just-enough-fp-pure-functions/index.mdx
@@ -13,6 +13,8 @@ relatedPostsSlugs: [
 ]
 ---
 
+import EggheadEmbed from '../../../components/EggheadEmbed'
+
 Another fundamental of functional programming is a solid understanding of pure functions. A pure function is one in which its output is derived solely from its inputs, with no side effects. I know that might still seem like gibberish to some of you, so I'll break this down and hopefully make it simple and clear.
 
 ### The First Part
@@ -113,14 +115,7 @@ In my opinion, your goal should be to use more pure functions in your applicatio
 
 _In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Identify Side Effects by Comparing Pure and Impure Functions](https://egghead.io/lessons/javascript-identify-side-effects-by-comparing-pure-and-impure-javascript-functions-342b2167)._
 
-<div style="position: relative; overflow: hidden; padding-top: 56.25%;">
-  <iframe style="
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: 0;
-    "
-    src="https://egghead.io/lessons/javascript-identify-side-effects-by-comparing-pure-and-impure-javascript-functions-342b2167/embed" />
-</div>
+<EggheadEmbed
+  src="https://egghead.io/lessons/javascript-identify-side-effects-by-comparing-pure-and-impure-javascript-functions-342b2167/embed"
+  title="Pure Functions"
+/>
