convert more files to mdx

--- a/src/posts/published/just-enough-fp-immutability/index.mdx
+++ b/src/posts/published/just-enough-fp-immutability/index.mdx
@@ -13,6 +13,8 @@ relatedPostsSlugs: [
 ]
 ---
 
+import EggheadEmbed from '../../../components/EggheadEmbed'
+
 Alright, I know that the title of this post already contains some technical jargon that's potentially intimidating. But if you've made it this far, I assure you, you can understand this concept.
 
 Let's define "immutability". The fastest way to do that is to start with its antonym--"mutability". Mutability comes from "mutable". Something that is mutable **can be changed**. Thus, something that is immutable **cannot be changed**.
@@ -116,14 +118,7 @@ In functional programming, we require immutable changes because of the purity of
 
 _In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Avoiding Mutations in JavaScript with Immutable Data Structures](https://egghead.io/lessons/javascript-avoiding-mutations-in-javascript-with-immutable-data-structures)._
 
-<div style="position: relative; overflow: hidden; padding-top: 56.25%;">
-  <iframe style="
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: 0;
-    "
-    src="https://egghead.io/lessons/javascript-avoiding-mutations-in-javascript-with-immutable-data-structures/embed" />
-</div>
+<EggheadEmbed
+  src="https://egghead.io/lessons/javascript-avoiding-mutations-in-javascript-with-immutable-data-structures/embed"
+  title="Immutability"
+/>
