--- a/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
+++ b/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
@@ -6,6 +6,8 @@ slug: 'just-enough-functional-programming-course-launch'
 title: 'Just Enough Functional Programming Course Launch'
 ---
 
+import EggheadEmbed from '../../../components/EggheadEmbed'
+
 In 2017, I came across [The Mostly Adequate Guide to Functional Programming](https://github.com/MostlyAdequate/mostly-adequate-guide) by [Brian Lonsdorf](https://twitter.com/drboolean). It's an incredible resource and introduction to functional programming in JavaScript. It inspired me to start giving talks about functional programming in 2018. After giving the talk several times, I decided to make a course to go along with it. That course is available to you now on [egghead.io](https://egghead.io/course/just-enough-functional-programming-in-javascript).
 
 The course is called [Just Enough Functional Programming in JavaScript](https://egghead.io/course/just-enough-functional-programming-in-javascript) and I think you'll like it.
@@ -31,14 +33,7 @@ In just 30 minutes, you'll learn more than "just enough".
 
 Here's the course intro video. Give it a watch!
 
-<div style="position: relative; overflow: hidden; padding-top: 56.25%;">
-  <iframe style="
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: 0;
-    "
-    src="https://egghead.io/lessons/javascript-course-introduction-to-just-enough-functional-programming-in-javascript/embed" />
-</div>
+<EggheadEmbed
+  src="https://egghead.io/lessons/javascript-course-introduction-to-just-enough-functional-programming-in-javascript/embed"
+  title="Course Launch"
+/>
