--- a/src/posts/published/just-enough-fp-higher-order-functions/index.mdx
+++ b/src/posts/published/just-enough-fp-higher-order-functions/index.mdx
@@ -13,6 +13,8 @@ relatedPostsSlugs: [
 ]
 ---
 
+import EggheadEmbed from '../../../components/EggheadEmbed'
+
 Making sense of functional programming requires a solid understanding of a few fundamental concepts. In my opinion, the first one you need to learn is the concept of "higher order functions".
 
 A higher order function is a function that meets at least one of the following requirements:
@@ -83,14 +85,7 @@ As you grow more comfortable with higher order functions, I'm certain you will f
 
 _In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Modify Functions with Higher Order Functions in JavaScript](https://egghead.io/lessons/javascript-modify-functions-with-higher-order-functions-in-javascript)._
 
-<div style="position: relative; overflow: hidden; padding-top: 56.25%;">
-  <iframe style="
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: 0;
-    "
-    src="https://egghead.io/lessons/javascript-modify-functions-with-higher-order-functions-in-javascript/embed" />
-</div>
+<EggheadEmbed
+  src="https://egghead.io/lessons/javascript-modify-functions-with-higher-order-functions-in-javascript/embed"
+  title="Higher Order Functions"
+/>
