--- a/src/posts/published/just-enough-fp-currying/index.mdx
+++ b/src/posts/published/just-enough-fp-currying/index.mdx
@@ -13,6 +13,8 @@ relatedPostsSlugs: [
 ]
 ---
 
+import EggheadEmbed from '../../../components/EggheadEmbed'
+
 Currying is, by far, one of the coolest things I've learned in the last few years. When it clicked in my brain, it was such an intense epiphany that I literally ran to the other room and begged my wife to join me in the office so I could explain it to her on the whiteboard. She doesn't know a thing about programming, but she listened to me. "Yeah, Kyle, that _kinda_ makes sense." Ha. I just had to share it with the first person I could find. Bless her for putting up with me.
 
 Anecdote over, on with the blog post!
@@ -101,14 +103,7 @@ As we'll see in the next post, currying and partial application is a powerful co
 
 _In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Refactor a Function to Use Currying in JavaScript](https://egghead.io/lessons/javascript-refactor-a-function-to-use-currying-in-javascript)._
 
-<div style="position: relative; overflow: hidden; padding-top: 56.25%;">
-  <iframe style="
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: 0;
-    "
-    src="https://egghead.io/lessons/javascript-refactor-a-function-to-use-currying-in-javascript/embed" />
-</div>
+<EggheadEmbed
+  src="https://egghead.io/lessons/javascript-refactor-a-function-to-use-currying-in-javascript/embed"
+  title="Currying"
+/>
