adds the post on pointfree

--- a/src/posts/published/just-enough-fp-higher-order-functions/index.mdx
+++ b/src/posts/published/just-enough-fp-higher-order-functions/index.mdx
@@ -9,7 +9,8 @@ relatedPostsSlugs: [
   'just-enough-fp-immutability',
   'just-enough-fp-currying',
   'just-enough-fp-partial-application',
-  'just-enough-fp-argument-order'
+  'just-enough-fp-argument-order',
+  'just-enough-fp-pointfree'
 ]
 ---
 
