--- a/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
+++ b/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
@@ -4,6 +4,15 @@ tags: ['Just Enough FP']
 date: '2019-03-22'
 slug: 'just-enough-functional-programming-course-launch'
 title: 'Just Enough Functional Programming Course Launch'
+relatedPostsSlugs: [
+  'just-enough-fp-higher-order-functions',
+  'just-enough-fp-pure-functions',
+  'just-enough-fp-immutability',
+  'just-enough-fp-currying',
+  'just-enough-fp-partial-application',
+  'just-enough-fp-argument-order',
+  'just-enough-fp-pointfree'
+]
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
