adds a description to pointfree post

--- a/src/posts/published/just-enough-fp-pointfree/index.mdx
+++ b/src/posts/published/just-enough-fp-pointfree/index.mdx
@@ -2,6 +2,7 @@
 categories: ['JavaScript', 'Web Development', 'Functional Programming']
 tags: ['Just Enough FP']
 date: '2019-05-01'
+description: 'Pointfree programming is a style of programming that favors passing the function itself as an argument rather than using lambda functions to operate on data. It focuses on the composition of functions rather than micro-managing your data.'
 slug: 'just-enough-fp-pointfree'
 title: 'Just Enough FP: Pointfree'
 relatedPostsSlugs: [
