--- a/src/posts/published/just-enough-fp-composition/index.mdx
+++ b/src/posts/published/just-enough-fp-composition/index.mdx
@@ -2,6 +2,7 @@
 categories: ['JavaScript', 'Web Development', 'Functional Programming']
 tags: ['Just Enough FP']
 date: '2019-05-17'
+description: 'Functional composition is the act of taking the output of one function and passing it directly as the input to the next function.'
 slug: 'just-enough-fp-composition'
 title: 'Just Enough FP: Composition'
 relatedPostsSlugs: [
