fix small typo `predicatge` -> `predicate`

--- a/src/posts/published/just-enough-fp-currying/index.mdx
+++ b/src/posts/published/just-enough-fp-currying/index.mdx
@@ -74,7 +74,7 @@ Let's consider the array method `filter`. `filter` receives a predicate function
 const filter = predicate => array => array.filter(predicate)
 ```
 
-Our function receives the `predicate` argument first, returns a new function that awaits the `array` and then evaluates and returns the result. Let's create a predicatge and pass it to filter.
+Our function receives the `predicate` argument first, returns a new function that awaits the `array` and then evaluates and returns the result. Let's create a predicate and pass it to filter.
 
 ```javascript
 const filter = predicate => array => array.filter(predicate)
