remove redundant phrase

--- a/src/posts/published/imagination/index.mdx
+++ b/src/posts/published/imagination/index.mdx
@@ -21,7 +21,7 @@ You have to understand something, and it's something I think is lost on a lot of
 
 An egghead lesson is not the time to philosophize or enumerate all the possibilities for a technique. No, it is the time to get to the meat and potatoes of what you're teaching in the most succinct way possible. To that end, my examples are often contrived and lacking in depth or nuance. It's not that I'm not capable, it's that it doesn't suit the goals we're going for.
 
-To that end, I don't actually see a problem with this mode of teaching, because, and here's the crux of my thesis, _it is the responsibility of the developer or engineer_ <Marker index={4} content="or any human being for that matter." /> _to be able to take the materials they are given and cultivate their imagination such that they can use the information in new ways, applied to new contexts._ In other words, it's your job to learn how to remix what you learn into something more. Key words: **your job**. Not my job. **Your job**.
+I don't actually see a problem with this mode of teaching, because, and here's the crux of my thesis, _it is the responsibility of the developer or engineer_ <Marker index={4} content="or any human being for that matter." /> _to be able to take the materials they are given and cultivate their imagination such that they can use the information in new ways, applied to new contexts._ In other words, it's your job to learn how to remix what you learn into something more. Key words: **your job**. Not my job. **Your job**.
 
 It is not my job as an educator to try and figure out a way to teach you all the ways in which you can use a technique or API. That would be insane! Almost everything has an infinite number of applications, it would be terribly difficult to cover even a moderate number of use cases. However, if I teach you concepts and give you the skills to _apply_ that knowledge to other situations, then we can actually achieve something useful.
 
