Change "Prologue" to "Epilogue"
Usually a prologue is at the beginning; an epilogue is at the end. :)

--- a/src/posts/published/imagination/index.mdx
+++ b/src/posts/published/imagination/index.mdx
@@ -39,6 +39,6 @@ Look, I fundamentally believe we all have laziness in us. For hundreds of thousa
 
 You need to cultivate your imagination. You need to improve your ability to think _divergently_. That skill, more so than any engineering/dev technique itself, is what will unlock potential in your career, and maybe in your life. So I'm pleading with you, before you criticize me, or another person with something like the complaint above, be sure to take a minute and try to use your imagination. Try and remix that shit.
 
-### Prologue
+### Epilogue
 
 I'd be remiss if I made a post on imagination and remixing shit and didn't mention this awesome documentary I watched a few years ago called [Everything is a Remix](https://www.everythingisaremix.info/watch-the-series). It's a short 4 part documentary that is well worth your time. Check it out, tell me what you think about it by tweeting me. Peace! ☮
