--- a/src/posts/published/how-to-add-algolia-search-to-a-gatsby-blog/index.mdx
+++ b/src/posts/published/how-to-add-algolia-search-to-a-gatsby-blog/index.mdx
@@ -333,7 +333,7 @@ That said, if you're like me and adding search to a blog with many long posts, y
 
 I have a few lengthy posts that were breaking the allowable size limit for Algolia's "Community" plan. Luckily, the people over at Algolia have already thought about this for you and have written this handy post about handling long documents: [https://www.algolia.com/doc/guides/sending-and-managing-data/prepare-your-data/how-to/indexing-long-documents/](https://www.algolia.com/doc/guides/sending-and-managing-data/prepare-your-data/how-to/indexing-long-documents/).
 
-Here's the TL;DR; If your records are too big, we need to divide the content of those records into smaller pieces and index those instead. How you do this is up to you and your specific data, but for a blog, a could place to start might be every paragraph (seriously). We aren't concerned with how big the index is, just the size of the records. At the start of this process I only had 77 records. By the end, I had over 1.7K records! Let me show you how I did it.
+Here's the TL;DR; If your records are too big, we need to divide the content of those records into smaller pieces and index those instead. How you do this is up to you and your specific data, but for a blog, a good place to start might be every paragraph (seriously). We aren't concerned with how big the index is, just the size of the records. At the start of this process I only had 77 records. By the end, I had over 1.7K records! Let me show you how I did it.
 
 Reopen the `algolia.js` file from before, we're going to make some modifications to it. The culprit of my large records is the `rawBody` data I'm getting from my query. This contains all the text in the body of my blog post. Thus, a long post means a big record. We need to manipulate this data in a way to reduce it's size.
 
