--- a/src/posts/published/how-to-add-algolia-search-to-a-gatsby-blog/index.mdx
+++ b/src/posts/published/how-to-add-algolia-search-to-a-gatsby-blog/index.mdx
@@ -52,10 +52,15 @@ Take the four strings I had you save from the previous step, and add them to bot
 ```javascript
 // .env.*
 
-GATSBY_ALGOLIA_APP_ID = YOUR_ALGOLIA_APP_ID
-GATSBY_ALGOLIA_INDEX_NAME = YOUR_INDEX_NAME
-GATSBY_ALGOLIA_SEARCH_KEY = YOUR_ALGOLIA_SEARCH_KEY
-GATSBY_ALGOLIA_ADMIN_KEY = YOUR_ALGOLIA_ADMIN_KEY
+// Sorry for the prettier-ignores. You don't need them, I do because it keeps adding spaces around '='
+// prettier-ignore
+GATSBY_ALGOLIA_APP_ID=YOUR_ALGOLIA_APP_ID
+// prettier-ignore
+GATSBY_ALGOLIA_INDEX_NAME=YOUR_INDEX_NAME
+// prettier-ignore
+GATSBY_ALGOLIA_SEARCH_KEY=YOUR_ALGOLIA_SEARCH_KEY
+// prettier-ignore
+GATSBY_ALGOLIA_ADMIN_KEY=YOUR_ALGOLIA_ADMIN_KEY
 ```
 
 Now that we have our environment variables setup, we are going to need to be able to access them in `gatsby-config.js`. Gatsby has a few special rules around how it injects various environment variables into your Gatsby builds. One of the rules requires that we inject our own variables into the `gatsby-config.js` file, and this will require using the `dotenv` package. Install this package.
