--- a/src/posts/published/how-to-add-algolia-search-to-a-gatsby-blog/index.mdx
+++ b/src/posts/published/how-to-add-algolia-search-to-a-gatsby-blog/index.mdx
@@ -19,6 +19,8 @@ Adding search was easier than I expected. I had almost no understanding of the w
 
 Before I do, quick shout out to [Scott Enock](https://twitter.com/ScottEnock) for sending me an email requesting this feature. <Marker index={1} content="He said some nice things, too!" /> I legit didn't know enough people were reading this blog to make it worth adding this feature. Thanks!
 
+---
+
 ### Step One - Algolia Setup
 
 First things first, you need to create an Algolia account to use their service. Head over to [https://www.algolia.com/users/sign_up](https://www.algolia.com/users/sign_up) and sign up. There are a few forms to fill out. Here's the break down of what you need to do for each form step.
@@ -36,6 +38,8 @@ You'll be taken to a screen with a few options, but head to the "Dashboard" firs
   - Your App ID
   - Your Search-Only API Key
   - Your Admin API Key
+
+---
 
 ### Step Two - `gatsby-plugin-algolia`
 
@@ -83,7 +87,7 @@ const queries = []
 
 module.exports = {
   plugins: [
-    // You like have other plugins here
+    // You likely have other plugins here
     {
       resolve: 'gatsby-plugin-algolia',
       options: {
@@ -100,11 +104,13 @@ module.exports = {
 
 At this point, our plugin is configured. However, we still need to create some `queries` to be used by the plugin to create the Algolia index records (and UI to follow after that). So let's work on our `queries` next.
 
+---
+
 ### Step Three - Creating our Record Queries
 
 An Algolia index is made up of _records_. In Gatsby, we create query objects that utilize GraphQL to get the data we send to Algolia to create these records. At this time, my blog only requires one query object, so I'll show you how I wrote that. Your specific needs might vary at this step in the process.
 
-I want to create a record for each one of my posts. To do this, I need to write a GraphQL query that gets me an object of data for each post. I'm going to do this in a separate file I've named `algolia.js`.
+I want to create a record for each one of my posts. To do this, I need to write a GraphQL query that returns an object of data for each post. I'm going to do this in a separate file I've named `algolia.js`.
 
 This file will export the `queries` array to be used by our configuartion in `gatsby-config.js`, so I like to start my file with that, and then go back and fill in the rest of the logic.
 
@@ -125,7 +131,7 @@ And in `gatsby-config.js`:
 const queries = require('./src/utils/algolia')
 ```
 
-Now that our files are wired up, we need to provide at least one query object to our `queries` array. This object will likely take at minimum two propertes (though, you should read the documenation for your own specific needs). Those properties are the `query` and `transformer`. The value provided for the `query` property is a GraphQL query string. The `transformer` is a function that takes the data retrieved by the query and transforms it into the array of objects that will become your Algolia index records.
+Now that our files are wired up, we need to provide at least one query object to our `queries` array. This object will likely take at minimum two properties (though, you should read the documenation for your own specific needs). Those properties are the `query` and `transformer`. The value provided for the `query` property is a GraphQL query string. The `transformer` is a function that takes the data retrieved by the query and transforms it into the array of objects that will become your Algolia index records.
 
 My particular needs here are likely a bit different than yours. My blog explicitly uses Markdown and MDX files, but I can get all of the necessary files with one query to the `allMdx` property in my GraphQL schema. Let me show you the pieces I wrote for my initial query:
 
@@ -183,9 +189,11 @@ As of right now, we are at a place where we can get some records into your Algol
 npm run build
 ```
 
-If everything worked, you should see in the output of the build some communication indicating that records were added to your index. You can now head to your Algolia dashboard, click the "Indices" link in the menu and see that your index now has records.
+If everything worked, you should see in the build output evidence indicating that records were added to your Algolia index. You can now head to your Algolia dashboard, click the "Indices" link in the menu, and see that your index now has records.
 
-We're going to revisit this file in a step later on in the tutorial to improve our query.
+We're going to revisit this file later on in the tutorial to improve our query.
+
+---
 
 ### Step Four - Create a Search UI
 
@@ -195,7 +203,7 @@ To create the UI for our search, we're going to make use of two more packages fr
 npm install algoliasearch react-instantsearch-dom
 ```
 
-Now, before we dive into the UI, please note that you might make very different decisions than I did when making yours. I chose to put my search in a modal that takes up the full screen. I did this because it allowed the user to always have access to search regardless of what page they were on, without needing to navigate else where. It is possible that in the future, my UI might change. Since our UIs might be so different, I want to first show you the minimum example that you need, and then explain what I did with my UI.
+Now, before we dive into the UI, please note that you might make very different decisions than I did when making your UI. I chose to put my search in a modal that takes up the full screen. I did this because it allowed the user to always have access to search regardless of what page they were on, without needing to navigate else where. It is possible that in the future, my UI might change. Since our UIs might be very different, I want to first show you the minimum example that you need, and then explain what I did with my UI.
 
 I have made a new component file, `Search.js`, and the minimal example would look like this:
 
@@ -224,11 +232,9 @@ export default function Search() {
 }
 ```
 
-This minimal example follows the documentation of the package, but also makes use of our `env` variables to wire things up correctly. If you import this somewhere in your app, you should be able to do searches on your index now.
+This minimal example follows the documentation of the package, but also makes use of our `env` variables to wire things up correctly. If you import this somewhere in your app, you should be able to do searches on your Algolia index now.
 
-All the components in `react-instantsearch` work together as "compound components". That is, used in the right way, each component receives the data it needs to render properly under the hood. You don't have to do any wiring yourself.
-
-However, you might not be completely satisfied with the UI this gives you. I wasn't. That's ok, there are options.
+All the components in `react-instantsearch` work together as "compound components". That is, used in the right way, each component receives the data it needs to render properly _under the hood_. You don't have to do any wiring yourself. However, you might not be completely satisfied with the UI this gives you. I wasn't. That's ok, there are options.
 
 If you are using traditional CSS, you might be able to make all the customizations you need just by updating a stylesheet. Use the inspector (or look at the docs) to find the class names Algolia provides each of these components, and then write styles accordingly.
 
@@ -236,7 +242,7 @@ In my case, I'm using [`emotion`](https://github.com/emotion-js/emotion) for my 
 
 In my case, I specifically customized the `Searchbox`, `Hits` and `Pagination` components of my UI. I'm going to focus on the customized `Hits` in this article, you can view the other customizations at [https://github.com/kyleshevlin/blog/blob/master/src/components/Search.js](https://github.com/kyleshevlin/blog/blob/master/src/components/Search.js).
 
-The `Hits` are the individual results of your query. In my case, I just want a simple list of results running down the page, but wiht my styles. To do this, I'll use the `connectHits` higher order component provided, and then provide it a component that makes use of the `hits` props it provides.
+The `Hits` are the individual results of your query. In my case, I just want a simple list of results running down the page, but with my styles. To do this, I'll use the `connectHits` higher order component provided, and then provide it a component that makes use of the `hits` prop it provides.
 
 ```javascript
 // Search.js
@@ -325,17 +331,19 @@ export default function Search() {
 
 With the higher order component, I've been able to use the markup I prefer and style it in a way that fits my blog. Explore the docs and the other higher order components to get the results you're looking for.
 
+---
+
 ### Optional Step Five - Optimize Your Record Size
 
 At this point, you should have fully functioning search working on your Gatsby site. Congratulations!
 
 That said, if you're like me and adding search to a blog with many long posts, you may have run into an issue while creating your index--some of your records are **too big**.
 
-I have a few lengthy posts that were breaking the allowable size limit for Algolia's "Community" plan. Luckily, the people over at Algolia have already thought about this for you and have written this handy post about handling long documents: [https://www.algolia.com/doc/guides/sending-and-managing-data/prepare-your-data/how-to/indexing-long-documents/](https://www.algolia.com/doc/guides/sending-and-managing-data/prepare-your-data/how-to/indexing-long-documents/).
+I have a few lengthy posts that were breaking the allowable size limit for Algolia's "Community" plan. Luckily, the people over at Algolia have already thought about this and have written this handy post about handling long documents: [https://www.algolia.com/doc/guides/sending-and-managing-data/prepare-your-data/how-to/indexing-long-documents/](https://www.algolia.com/doc/guides/sending-and-managing-data/prepare-your-data/how-to/indexing-long-documents/).
 
 Here's the TL;DR; If your records are too big, we need to divide the content of those records into smaller pieces and index those instead. How you do this is up to you and your specific data, but for a blog, a good place to start might be every paragraph (seriously). We aren't concerned with how big the index is, just the size of the records. At the start of this process I only had 77 records. By the end, I had over 1.7K records! Let me show you how I did it.
 
-Reopen the `algolia.js` file from before, we're going to make some modifications to it. The culprit of my large records is the `rawBody` data I'm getting from my query. This contains all the text in the body of my blog post. Thus, a long post means a big record. We need to manipulate this data in a way to reduce it's size.
+Reopen the `algolia.js` file from before, we're going to make some modifications to it. The culprit of my large records is the `rawBody` data I'm getting from my query. This contains all the text in the body of my blog post. Thus, a long post means a big record. We need to manipulate this data in a way to reduce its size.
 
 ```javascript
 // algolia.js
@@ -388,9 +396,9 @@ const queries = [
 module.exports = queries
 ```
 
-Now, our index has lots of tiny records, which is exactly what Algolia wants. Also, each record still contains all the necessary data for our search UI. There is one final problem though.
+Now, our index has lots of tiny records which is exactly what Algolia wants. Also, each record still contains all the necessary data for our search UI to render. There is one final problem though.
 
-If I were to do a search at this moment, say for the word 'React', I'll get results that show the same article over and over and over again because I use the `tag` React for my record objects. This isn't good. We need a way to dedupe the records. Luckily again, Algolia has thought of this.
+If I were to do a search at this moment, say for the word 'React', I'll get results that show the same article over and over again because I use the `tag` React for my record objects. This isn't good. We need a way to dedupe the records. Luckily again, Algolia has thought of this.
 
 We just need to update two places in our app to make this happen. First, we'll make a small update to the query object in `algolia.js`.
 
@@ -419,9 +427,9 @@ const queries = [
 module.exports = queries
 ```
 
-In the `settings` object of our query, we are telling Algolia that we want distinct results, and that they should be recognized as distinct by there `slug` property (which is unique to each post).
+In the `settings` object of our query, we are telling Algolia that we want distinct results and that they should be recognized as distinct by their `slug` property (which is unique to each post).
 
-Now, we need to inform our UI that we only want distinct results. In our `Search` component, we need to add the `Configure` component. Since I don't want to show _all_ my customizations (the code text would be quite long), I'll take the minimal version and add the `Configure` component to that. Make adjustments as you need to for your situation.
+Now, we need to inform our UI that we only want distinct results. In our `Search` component, we need to add the `Configure` component. Since I don't want to show _all_ my customizations (the code block would be quite long), I'll take the minimal version and add the `Configure` component to that. Make adjustments as you need to for your situation.
 
 ```javascript
 // Search.js
@@ -457,6 +465,8 @@ export default function Search() {
 
 Seriously, that is all it took. Adding the `distinct` prop to our `Configure` component, and now my results return only one `hit` instead of many duplicates. I owe some props to [Haroen](https://twitter.com/haroenv) who helped me out over the weekend to figure this last bit out.
 
+---
+
 ### Conclusion
 
 And that's it! We're done. We got search working on a Gatsby blog (and you can apply this to any Gatsby site). To recap, the steps are:
@@ -467,6 +477,6 @@ And that's it! We're done. We got search working on a Gatsby blog (and you can a
 - Create a UI with `react-instantsearch-dom`
 - And optionally, optimize your records
 
-I hope you you find this process as relatively painless as I did. If you're confused, be sure to check the documentation. If you're looking for additional resources, I recommend checking out this video from my friend Jason Lengstorf on his YouTube channel about doing this very same thing: [Add Algolia search to your Gatsby site (with Bram Adams) — Learn With Jason](https://www.youtube.com/watch?v=VSkXyuXzwlc). I know I found parts of the video helpful in this process.
+I hope you find this process as relatively painless as I did. If you're confused, be sure to check the documentation. If you're looking for additional resources, I recommend checking out this video from my friend [Jason Lengstorf](https://twitter.com/jlengstorf) on his YouTube channel about this very same topic: [Add Algolia search to your Gatsby site (with Bram Adams) — Learn With Jason](https://www.youtube.com/watch?v=VSkXyuXzwlc). I know I found parts of the video helpful in this process.
 
-I know that this tutorial is still not _exhaustive_ but I hope it's a big help to what you're trying to accomplish. Hit me up on Twitter if you have any questions I can help with regarding the post!
+This tutorial is still not _exhaustive_, but I hope it's a big help to what you're trying to accomplish. Hit me up on Twitter if you have any questions I can help with regarding the post!
